# OrderParserProcessor

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  clean_generated.sh  clean_proto.sh  docker-compose.yaml  instructions  package-lock.json  package.json  setuptmux.sh  test_compile_var.cc
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/skills/test/: SKILL.md
.github/workflows/: backend.yml
backend/: CMakeLists.txt  main.cc
backend-api/: database.py  main.py  models.py  order.db  requirements.txt
backend-api/communication/: communicator.py
backend-api/core/: process_manager.py
backend-api/core/communication/: communicator.py
backend-api/routes/: views.py
backend/includes/: command.h
backend/includes/handlers/: script_submit_handler.h
backend/includes/processors/: script_submit_processor.h
backend/includes/processors/common/: script_info.h  timers.h
backend/includes/processors/visitors/: concrete_fiscript_visitor.h  file_maker.h
backend/includes/services/: ScriptSubmitService.h  reacton_manager.h  reacton_service.h  script_alert_service.h  script_submit_service.h
backend/src/: system_builder.py
backend/src/handlers/: script_submit_handler.cc
backend/src/processors/: script_submit_processor.cc
backend/src/processors/common/: reacton_manager.cc  script_info.cc  timers.cc
backend/src/processors/visitors/: concrete_fiscript_visitor.cc  file_maker.cc
backend/src/services/: reacton_manager.cc  reacton_service.cc  script_alert_service.cc  script_submit_service.cc
backend/test/: CMakeLists.txt
backend/test/parsing/: simple_parsing_test.cc
backend/test/processors/: simple_parsing_test.cc
backend/test/processors/common/: timer_test.cc
backend/test/processors/visitors/: concrete_fiscript_visitor_test.cc  file_maker_test.cc  if_statement_test.cc  nested_commands_test.cc  print_variable_test.cc  variable_test.cc
backend/test/services/: reacton_service_test.cc
cmake/: ExternalAntlr4Cpp.cmake  README.md
connectivity/: CMakeLists.txt  main.cc
connectivity/includes/: market_data_point.h  market_data_subscription.h  python_api_gtw.h
connectivity/includes/services/: market_data_service.h
connectivity/src/: python_api_gtw.cc
connectivity/src/services/: market_data_service.cc
connectivity/test/: CMakeLists.txt  README.md
connectivity/test/mocks/: mock_grpc_writer.h  mock_server_context.h
connectivity/test/unit/: market_data_point_test.cc  market_data_service_test.cc  python_api_gtw_test.cc
db/: flyway.conf
db/migrations/: V001__create_script_schema.sql
docker/: backend.Dockerfile  backend_api.Dockerfile
fiscript_test/: test_boolean_comprehensive.fiscript  test_schedule_in_react.fiscript  test_simple.fiscript  test_var_simple.fiscript  test_variables.fiscript
frontend/: index.js
frontend/OrderParserProcessor/: index.html  package-lock.json  package.json
frontend/OrderParserProcessor/src/: App.css  App.jsx  Message.jsx
frontend/OrderParserProcessor/src/backend-api/: ScriptRequestHandler.js
frontend/OrderParserProcessor/src/components/: ListGroup.jsx
frontend/OrderParserProcessor/src/pages/: MainLayout.jsx  NotFound.jsx  NotificationBar.jsx  SideBar.jsx  SideBarData.jsx
frontend/OrderParserProcessor/src/pages/book/: Book.jsx
frontend/OrderParserProcessor/src/pages/market-data/: MarketData.jsx
frontend/OrderParserProcessor/src/pages/scripts/: Scripts.jsx  ScriptsList.jsx
frontend/OrderParserProcessor/src/structures/: AlertNotif.js  ScriptSubmit.js
proto/messages/: price_update.proto  script.proto  script_alert_notif.proto  script_submit.proto  synchronous_reply.proto
proto/services/: api_to_core.proto  marketdata.proto  script_to_api.proto
rules/parser/: FiScript.g4
